<resources>
    <string name="app_name">SqliteTutorial</string>
    <string name="final_Exam">Final_Exam</string>
    <string name="task_title">Task Title</string>
    <string name="mark_as_accomplished">Mark as accomplished?</string>
    <string name="task_priority">Task Priority</string>
    <string name="save">Save</string>
    <string name="selecting_its_priority">Selecting its priority:</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="title_1">Title 1</string>
    <string name="_1">1</string>
    <string name="select_priority">Select priority</string>
    <string name="no_data">No Data</string>
</resources>
